<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/size_04">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_12"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/size_04"
            android:paddingEnd="@dimen/size_04">

            <Spinner
                android:id="@+id/film_selector"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_04"
                android:background="@drawable/threeway_button_bg"
                android:dropDownWidth="match_parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_film_type"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_12"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/size_04"
            android:paddingEnd="@dimen/size_04">

            <Spinner
                android:id="@+id/sensibility_selector"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_04"
                android:background="@drawable/threeway_button_bg"
                android:dropDownWidth="match_parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_sensibility"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_12"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/size_04"
            android:paddingEnd="@dimen/size_04">

            <ImageView
                android:layout_width="@dimen/size_06"
                android:layout_height="@dimen/size_06"
                android:src="@drawable/calendar"
                android:tint="@color/white_pressed_dark"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_date"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"/>

        </LinearLayout>

    </LinearLayout>
</layout>